# AG-013.github.io

./: README.md  index.html  index_og.html
assets/js/: script.js
assets/photos data/drone/: AUTONOMOUS FIXED WING UAV (Unmanned aerial Vehicle).pptx
assets/photos data/group_project/: CODE for project.docx  Robotic_Arm_Report.docx
assets/photos data/group_project/image_detection_calib/: CMakeLists.txt  package.xml
assets/photos data/group_project/image_detection_calib/launch/: image_detection.launch
assets/photos data/group_project/image_detection_calib/src/: extrinsic_calibration_node.py  fdsfsd.py  image_detect.py
