<package format="2">
  <name>image_detection_calib</name>
  <version>0.0.1</version>
  <description>Image Detection package for ArUco marker detection and Dobot control</description>

  <maintainer email="adeshgrewalwk@gmail.com">Adesh Grewal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>

  <export></export>
</package>
